--- a/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
+++ b/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
@@ -435,19 +435,19 @@ saveRDS(cd4_markers, "objects/cd4_seurat_markers.rds")
 #merge clusters
 cd4 <- RenameIdents(cd4,
                     "0" = "Tcon_mem",
-                    "1" = "Treg_Tigit_lo",
-                    "2" = "Treg_Tigit_hi",
+                    "1" = "Treg_resting",
+                    "2" = "Treg_eff",
                     "3" = "Tcon_cm",
-                    "4" = "Tcon_fh",
+                    "4" = "Tcon_Tfh",
                     "5" = "Tcon_effmem",
                     "6" = "Recently_activated",
                     "7" = "Tcon_cm",
-                    "8" = "Tcon_Nrn1",
-                    "9" = "Tcon_eff_Cxcr6",
+                    "8" = "Tcon_Th21",
+                    "9" = "Tcon_eff",
                     "10" = "Acinar_contaminated",
                     "11" = "Interferon_sensing",
                     "12" = "contaminant",
-                    "13" = "Tcon_fh",
+                    "13" = "Tcon_Tfh",
                     "14" = "Proliferating",
                     "15" = "contaminant",
                     "16" = "contaminant")
@@ -474,7 +474,7 @@ cd8_markers <- FindAllMarkers(cd8, min.pct = 0.25, only.pos = T, logfc.threshold
 cd8 <- RenameIdents(cd8,
                     "0" = "CD8_slec",
                     "1" = "CD8_cm",
-                    "2" = "CD8_eff_Cxcr6",
+                    "2" = "CD8_eff",
                     "3" = "CD8_slec",
                     "4" = "CD8_texh",
                     "5" = "CD8_mem",
@@ -483,7 +483,7 @@ cd8 <- RenameIdents(cd8,
                     "8" = "Acinar_contaminated",
                     "9" = "contaminant",
                     "10" = "CD8_slec",
-                    "11" = "CD8_cm_Gzmm",
+                    "11" = "CD8_cm",
                     "12" = "contaminant",
                     "13" = "Interferon_sensing",
                     "14" = "CD8_effmem",                    
@@ -496,15 +496,52 @@ new_metadata <- rbind(data.frame(seurat_clusters = Idents(cd4)), data.frame(seur
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 Idents(seurat_integrated) <- seurat_integrated$seurat_clusters
 seurat_integrated <- subset(seurat_integrated, idents = "contaminant", invert = T)
-
-#factor the Seurat clusters to order them by celltype (shared clusters are at the end)
-seurat_integrated$seurat_clusters <- factor(seurat_integrated$seurat_clusters, 
-                                            levels = c(levels(seurat_integrated$seurat_clusters)[grep("CD8", levels(seurat_integrated$seurat_clusters))], #first clusters are CD8
-                                                       levels(seurat_integrated$seurat_clusters)[grep("Tcon", levels(seurat_integrated$seurat_clusters))], #next clusters are Tcon
-                                                       levels(seurat_integrated$seurat_clusters)[grep("Treg", levels(seurat_integrated$seurat_clusters))], #next clusters are Treg
-                                                       levels(seurat_integrated$seurat_clusters)[-grep("CD8|Tcon|Treg", levels(seurat_integrated$seurat_clusters))])) #remaining clusters are shared
+cluster_levels <- c("CD8_cm", #factor the Seurat clusters to order them by celltype (shared clusters are at the end)
+                    "CD8_mem",
+                    "CD8_effmem",
+                    "CD8_slec",
+                    "CD8_eff",
+                    "CD8_pexh",
+                    "CD8_texh",
+                    "Tcon_cm",
+                    "Tcon_mem",
+                    "Tcon_effmem",
+                    "Tcon_eff",
+                    "Tcon_Th21",
+                    "Tcon_Tfh",
+                    "Treg_resting",
+                    "Treg_eff",
+                    "Acinar_contaminated",
+                    "Recently_activated",
+                    "Interferon_sensing",
+                    "Proliferating")
+seurat_integrated$seurat_clusters <- factor(seurat_integrated$seurat_clusters, levels = cluster_levels) #factor the Seurat clusters to order them by celltype (shared clusters are at the end)
 Idents(seurat_integrated) <- seurat_integrated$seurat_clusters
-DimPlot(seurat_integrated, label = T) + theme(legend.position = "none")
+```
+
+Plot the genes associated with each cluster group. For example, which genes are conserved within Tcon and CD8 central memory clusters, etc.
+```{r identify genes associated with clusters for heatmap}
+#find the markers that distinguish all of the clusters
+seurat_markers <- FindAllMarkers(seurat_integrated, min.pct = 0.25, only.pos = T, logfc.threshold = 0.25) %>%
+                     group_by(cluster) %>%
+                     filter(p_val_adj < 0.05) %>%
+                     group_by(cluster) %>%
+                     arrange(desc(avg_log2FC), .by_group = T)
+write.table(seurat_markers,"output/all_clusters_markers.tsv", sep = "\t", quote = F, row.names = F) #save to file
+
+#identify conserved genes within cluster groups
+#central memory for example
+seurat_markers %>% filter(cluster %in% c("CD8_cm","Tcon_cm")) %>% group_by(gene) %>% filter(n() > 1) %>% data.frame() #example
+cm_genes <- seurat_markers %>% filter(cluster %in% c("CD8_cm","Tcon_cm")) %>% group_by(gene) %>% filter(n() > 1) %>% pull(gene) %>% unique()
+mem_genes <- seurat_markers %>% filter(cluster %in% c("CD8_mem","Tcon_mem")) %>% group_by(gene) %>% filter(n() > 1) %>% pull(gene) %>% unique()
+eff_genes <- seurat_markers %>% filter(cluster %in% c("CD8_eff","Tcon_eff","CD8_effmem","Tcon_effmem")) %>% group_by(gene) %>% filter(n() > 1) %>% pull(gene) %>% unique()
+slec_genes  <- unique(c("Klrg1","Cx3cr1","Zeb2", seurat_markers %>% filter(cluster == "CD8_slec") %>% top_n(20, wt = avg_log2FC) %>% pull(gene)))
+treg1_genes <- seurat_markers %>% filter(cluster == "Treg_resting") %>% top_n(50, wt = avg_log2FC) %>% pull(gene) %>% unique()
+treg2_genes <- seurat_markers %>% filter(cluster == "Treg_eff") %>% top_n(50, wt = avg_log2FC) %>% pull(gene) %>% unique()
+acinar_genes <- seurat_markers %>% filter(cluster == "Acinar_contaminated") %>% top_n(50, wt = avg_log2FC) %>% pull(gene) %>% unique()
+ifn_genes <- seurat_markers %>% filter(cluster == "Interferon_sensing") %>% filter(grepl("Is|If|Stat1", gene))
+activation_genes <- seurat_markers %>% filter(cluster == "Recently_activated") %>% top_n(50, wt = avg_log2FC) %>% pull(gene) %>% unique()
+proliferating_genes <- seurat_markers %>% filter(cluster == "Proliferating") %>% top_n(50, wt = avg_log2FC) %>% pull(gene) %>% unique()
 ```
 
 Now that the CD4 and CD8 T cells have been identified, next fix the clonotype designations so that only CD8 or CD4 T cell clones are distinguished. Note that **celltype** is now considered:
@@ -534,7 +571,7 @@ seurat_integrated$treatment <- factor(seurat_integrated$treatment, levels = c("I
 
 As a measure of exhaustion, the number of co-inhibitory receptors expressed simultaneously in the same cell can be counted. This will be added to the metadata:
 ```{r coinhibitory receptor count}
-new_metadata <- data.frame(coinh_count = rowSums(as.data.frame(t(as.data.frame(pan8@assays$RNA@data[c("Pdcd1","Havcr2","Ctla4","Lag3","Tigit"),]))) > 0))
+new_metadata <- data.frame(coinh_count = rowSums(as.data.frame(t(as.data.frame(seurat_integrated@assays$RNA@data[c("Pdcd1","Havcr2","Ctla4","Lag3","Tigit","Cd160","Cd244a"),]))) > 0))
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 ```
 
@@ -542,7 +579,7 @@ Modify the celltype of the CD4+ T cells to distinguish Tcon and Treg based on th
 ```{r distinguish Tcon and Treg}
 new_metadata <- seurat_integrated@meta.data %>% 
                   mutate(cd4_or_cd8 = paste0(celltype), 
-                         celltype = ifelse(seurat_clusters %in% c("Treg_Tigit_lo","Treg_Tigit_hi"), "Treg", paste0(celltype))) %>% 
+                         celltype = ifelse(seurat_clusters %in% c("Treg_resting","Treg_eff"), "Treg", paste0(celltype))) %>% 
                   select(cd4_or_cd8, celltype)
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 ```
@@ -666,31 +703,40 @@ gene_signatures <- c("SLEC1",
                      "lag3act61")
 ```
 
-Add the NRP-v7 tetramer staining to the Seurat meta data for ease of plotting. An NRP-v7+ T cell was identified if: 1) The cell was classified as a CD8 T cell; 2) The cell had an associated TCR; 3) the cell had a NRP-7 tetramer TotalSeqC staining value of over 0.5, and; 4) if, based on the previous criteria, there were more positive than negative NRP-v7 T cells in the tcrtype (determined by paired TRA.cdr3 and TRB.cd3 sequences only).
+Add the NRP-v7 tetramer staining to the Seurat meta data for ease of plotting. An NRP-v7+ T cell was identified if: 1) The cell was classified as a CD8 T cell; 2) The cell had an associated TCR; 3) the cell had a NRP-7 tetramer TotalSeqC staining value of over 1.5. NRP-v7+ T cells were sorted by the Scheitinger lab for scRNA-seq: these TCRs will be examined to determine the overlap with the tetramer+ T cells identified in this experiment.
 ```{r }
-new_metadata <- as.data.frame(t(seurat_integrated@assays$FB@data))
+new_metadata <- as.data.frame(t(data.frame(seurat_integrated@assays$FB@data)))
 colnames(new_metadata) <- "NRPv7_TotalSeqC"
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 new_metadata <- seurat_integrated@meta.data %>% 
-                  mutate(tetramer_specificity = ifelse(NRPv7_TotalSeqC > 1 & celltype == "CD8", #cutoff for specificity
+                  mutate(tetramer_specificity = ifelse(NRPv7_TotalSeqC > 1.5 & celltype == "CD8", #cutoff for specificity
                                                  "NRPv7", 
                                                  "unknown")) %>%
                   dplyr::select(tetramer_specificity)
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 
+sample_names <- list.files("data/GSE151652") #all samples are within individual folders
+sample_names
+
+tetramer_tcrs <- list() #list containing all of the tcr data
+
+for (condition in conditions) {
+  tetramer_tcrs <- read.table(paste0("data/GSE151652", sample_name))$V1
+}
+
 #use TCRtypes to determine specificity
-tbl <- data.frame(seurat_integrated@meta.data %>%
-        filter(!is.na(tcrtype_id)) %>%
-        group_by(tetramer_specificity, tcrtype_id) %>% 
-        tally() %>% 
-        cast(tcrtype_id ~ tetramer_specificity, value = "n")) %>%
-        arrange(desc(NRPv7))
-tbl[is.na(tbl)] <- 0
-nrpv7_tcrtypes <- tbl %>% filter(NRPv7 > unknown) %>% pull(tcrtype_id) #consider a cell NRPv7 positive if there is more NRPv7 positive than negative cells
-new_metadata <- seurat_integrated@meta.data %>%
-                  mutate(tetramer_specificity = ifelse(tcrtype_id %in% nrpv7_tcrtypes, "NRPv7", "unknown")) %>%
-                  dplyr::select(tetramer_specificity)
-seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
+# tbl <- data.frame(seurat_integrated@meta.data %>%
+#         filter(!is.na(tcrtype_id)) %>%
+#         group_by(tetramer_specificity, tcrtype_id) %>% 
+#         tally() %>% 
+#         cast(tcrtype_id ~ tetramer_specificity, value = "n")) %>%
+#         arrange(desc(NRPv7))
+# tbl[is.na(tbl)] <- 0
+# nrpv7_tcrtypes <- tbl %>% filter(NRPv7 > unknown) %>% pull(tcrtype_id) #consider a cell NRPv7 positive if there is more NRPv7 positive than negative cells
+# new_metadata <- seurat_integrated@meta.data %>%
+#                   mutate(tetramer_specificity = ifelse(tcrtype_id %in% nrpv7_tcrtypes, "NRPv7", "unknown")) %>%
+#                   dplyr::select(tetramer_specificity)
+# seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 ```
 
 Finally, add the new metadata from the integrated Seurat back to the separate Seurats of the CD4 and CD8 T cells and then save.
