--- a/scripts/scRNAseq/6_figure5_plots.Rmd
+++ b/scripts/scRNAseq/6_figure5_plots.Rmd
@@ -98,7 +98,7 @@ p_allcells_shared_pie <- seurat_integrated@meta.data %>%
 grid.arrange(p_allcells_shared, p_allcells_shared_pie, nrow = 2)
 ```
 
-```{r pancreas only cells}
+```{r UMAP of pancreas only cells}
 #UMAP of pancreas only shared/non-shared for CD4 and CD8 T cell clusters
 p_pan8_shared <- pan8@meta.data %>% 
                   filter(!is.na(pancreas_matching)) %>%
@@ -354,7 +354,38 @@ grid.arrange(p_termexh_clonotypes, p_eff_clonotypes, p_mem_clonotypes, ncol = 1)
 #show UMAPs of certain clonotypes as examples
 ```
 
-**UMAP examples of certain shared clonotypes: look at CD8_texh vs. CD8_eff_Cxcr6 vs. CD8_mem**
+Plot some example UMAPs of shared clusters.
+```{r example UMAPs of clonotypes across tissues}
+seurat_integrated@meta.data %>% 
+                      filter(clonotype_id %in% paste0("clonotype", c(1,3:4))) %>%
+                      ggplot(aes(x = allcells_UMAP_1, 
+                                 y = allcells_UMAP_2, 
+                                 color = seurat_clusters)) + 
+                      geom_point(data = seurat_integrated@meta.data %>% 
+                                     dplyr::select(-treatment), 
+                                 shape = 16, 
+                                 color = "grey90") +
+                      geom_point(shape = 16, 
+                                 alpha = 1) +
+                      theme_minimal() +
+                      theme(axis.title = element_blank(),
+                            axis.text = element_blank(),
+                            panel.grid = element_blank(),
+                            text = element_text(size = 15),
+                            legend.position = "none") +
+                      labs(x = 'UMAP 1', 
+                           y = 'UMAP 2', 
+                           color=NULL,
+                           title = "Top clonotype shared with pancreas") +
+                      scale_alpha_continuous(range = c(0.4 ,1)) +
+                      scale_color_manual(values = custom_colors("clusters")) +
+                      scale_size_continuous(range=c(1, 3)) +
+                      guides(color = guide_legend(override.aes = list(alpha = 1, 
+                                                                      size = 5, 
+                                                                      shape = 19)), 
+                             size = guide_legend()) +
+                      facet_wrap(~treatment)
+```
 
 Track the NRP-v7+ tcrtypes across tissues:
 ```{r track NRP-v7+ tcrtypes}
@@ -502,5 +533,6 @@ ptet_mem_tcrtypes <- tcrtypes_means %>%
 grid.arrange(ptet_termexh_tcrtypes, ptet_eff_tcrtypes, ptet_mem_tcrtypes, ncol = 1)
 ```
 
+Fisher's exact test with plot to look at sharing between clusters. Number of unique clonotypes in box and p values as color.
 
 Upset plots, venn diagrams, or something else to look at the sharing of clones across different Seurat clusters.
